--- a/drools-framework-kie-server-parent/drools-framework-kie-server-services-drools/pom.xml
+++ b/drools-framework-kie-server-parent/drools-framework-kie-server-services-drools/pom.xml
@@ -17,6 +17,15 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.chtijbug.drools</groupId>
+            <artifactId>drools-framework-runtime-base</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.chtijbug.drools</groupId>
+            <artifactId>drools-framework-runtime-entity</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.kie</groupId>
             <artifactId>kie-api</artifactId>
         </dependency>
