--- a/drools-framework-kie-server-parent/pom.xml
+++ b/drools-framework-kie-server-parent/pom.xml
@@ -13,9 +13,9 @@
     <artifactId>drools-framework-kie-server-parent</artifactId>
     <modules>
         <module>drools-framework-kie-server-services-drools</module>
-        <module>drools-framework-kie-server-rest-drools</module>
+        <!--module>drools-framework-kie-server-rest-drools</module-->
         <module>drools-framework-kie-server-webapp</module>
-        <module>drools-framework-kie-server-extension</module>
+        <!--module>drools-framework-kie-server-extension</module-->
     </modules>
 
 </project>
