--- a/pom.xml
+++ b/pom.xml
@@ -199,6 +199,21 @@
         <dependencies>
             <dependency>
                 <groupId>org.chtijbug.drools</groupId>
+                <artifactId>swimming-pool-kie-server</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.chtijbug.drools</groupId>
+                <artifactId>drools-framework-swimming-pool-model</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.chtijbug.drools</groupId>
+                <artifactId>swimming-pool-kie-server</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.chtijbug.drools</groupId>
                 <artifactId>drools-framework-kie-server-services-drools</artifactId>
                 <version>${project.version}</version>
             </dependency>
