--- a/drools-framework-examples/pom.xml
+++ b/drools-framework-examples/pom.xml
@@ -15,6 +15,8 @@
     <module>drools-framework-loyalty-model</module>
     <module>drools-framework-swimming-pool-model</module>
     <module>swimming-pool-kie-server</module>
+    <module>drools-framework-swimming-pool-rest-connector</module>
+
 
 </modules>
 
