--- a/drools-framework-examples/swimming-pool-kie-server/pom.xml
+++ b/drools-framework-examples/swimming-pool-kie-server/pom.xml
@@ -11,7 +11,10 @@
 
     <artifactId>swimming-pool-kie-server</artifactId>
     <dependencies>
-
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.chtijbug.drools</groupId>
             <artifactId>drools-framework-kie-server-services-drools</artifactId>
