--- a/drools-framework-runtime-entity/pom.xml
+++ b/drools-framework-runtime-entity/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <artifactId>drools-framework-parent</artifactId>
         <groupId>org.chtijbug.drools</groupId>
-        <version>1.1.0.17-2-SNAPSHOT</version>
+        <version>1.1.0.18-SNASPHOT</version>
     </parent>
 
     <artifactId>drools-framework-runtime-entity</artifactId>
