--- a/drools-framework-runtime-entity/pom.xml
+++ b/drools-framework-runtime-entity/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <artifactId>drools-framework-parent</artifactId>
     <groupId>org.chtijbug.drools</groupId>
-    <version>1.5.3-SNAPSHOT</version>
+    <version>1.5.3</version>
   </parent>
 
   <artifactId>drools-framework-runtime-entity</artifactId>
