--- a/drools-framework-rest-guvnor/pom.xml
+++ b/drools-framework-rest-guvnor/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <artifactId>drools-framework-parent</artifactId>
     <groupId>org.chtijbug.drools</groupId>
-    <version>1.5.4-SNAPSHOT</version>
+    <version>drools-framework-parent-1.5.3</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
